--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "prestart": "babel-node build_scripts/start_message.js",
     "start": "npm-run-all --parallel open:src",
     "open:src": "babel-node build_scripts/src_server.js",
+    "lint": "eslint webpack.config.* src build_scripts",
+    "lint:watch": "lint -- --watch",
     "security_check": "echo 'security'",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel"
